rerecorded space quotas fixture

--- a/internal/provider/fixtures/datasource_space_quotas_invalid.yaml
+++ b/internal/provider/fixtures/datasource_space_quotas_invalid.yaml
@@ -18,7 +18,7 @@ interactions:
             Authorization:
                 - Bearer redacted
             User-Agent:
-                - Terraform/1.5.7 terraform-provider-cloudfoundry/dev
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
         url: https://api.x.x.x.x.com/v3/organizations/40b73419-5e01-4be0-baea-932d46cea45b
         method: GET
       response:
@@ -36,15 +36,15 @@ interactions:
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Thu, 24 Oct 2024 06:02:47 GMT
+                - Fri, 10 Jan 2025 11:59:26 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 63fec55309ac8aca
+                - 6ef4748ca92ab857
             X-B3-Traceid:
-                - dd64ccbc4ec84e0b63fec55309ac8aca
+                - 2d6e009e6ea24d5f6ef4748ca92ab857
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -58,16 +58,16 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1729749788"
+                - "1736512023"
             X-Runtime:
-                - "0.003182"
+                - "0.003446"
             X-Vcap-Request-Id:
-                - dd64ccbc-4ec8-4e0b-63fe-c55309ac8aca::866dc73e-0da2-4a50-b4e3-4c1c613c1220
+                - 2d6e009e-6ea2-4d5f-6ef4-748ca92ab857::2951fcf4-eb89-4486-870e-0091c82dcc02
             X-Xss-Protection:
                 - 1; mode=block
         status: 404 Not Found
         code: 404
-        duration: 805.329375ms
+        duration: 729.453666ms
     - id: 1
       request:
         proto: HTTP/1.1
@@ -85,8 +85,8 @@ interactions:
             Authorization:
                 - Bearer redacted
             User-Agent:
-                - Terraform/1.5.7 terraform-provider-cloudfoundry/dev
-        url: https://api.x.x.x.x.com/v3/organizations/784b4cd0-4771-4e4d-9052-a07e178bae56
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5
         method: GET
       response:
         proto: HTTP/2.0
@@ -94,24 +94,24 @@ interactions:
         proto_minor: 0
         transfer_encoding: []
         trailer: {}
-        content_length: 794
+        content_length: 806
         uncompressed: false
-        body: '{"guid":"784b4cd0-4771-4e4d-9052-a07e178bae56","created_at":"2017-07-04T10:43:11Z","updated_at":"2024-01-08T15:08:31Z","name":"PerformanceTeamBLR","suspended":false,"relationships":{"quota":{"data":{"guid":"c17f045b-cebf-451a-b2d8-6c885fd9dbfc"}}},"metadata":{"labels":{"env":"canary"},"annotations":{}},"links":{"self":{"href":"https://api.x.x.x.x.com/v3/organizations/784b4cd0-4771-4e4d-9052-a07e178bae56"},"domains":{"href":"https://api.x.x.x.x.com/v3/organizations/784b4cd0-4771-4e4d-9052-a07e178bae56/domains"},"default_domain":{"href":"https://api.x.x.x.x.com/v3/organizations/784b4cd0-4771-4e4d-9052-a07e178bae56/domains/default"},"quota":{"href":"https://api.x.x.x.x.com/v3/organization_quotas/c17f045b-cebf-451a-b2d8-6c885fd9dbfc"}}}'
+        body: '{"guid":"3d3fcf37-a526-45f6-be96-4d7c4cee92a5","created_at":"2025-01-07T08:30:32Z","updated_at":"2025-01-07T08:31:35Z","name":"terraform-integration-prod_test-utu6l6uy","suspended":false,"relationships":{"quota":{"data":{"guid":"1840c11f-e233-499d-9b0d-fd3045ce4f26"}}},"metadata":{"labels":{},"annotations":{}},"links":{"self":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5"},"domains":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains"},"default_domain":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains/default"},"quota":{"href":"https://api.x.x.x.x.com/v3/organization_quotas/1840c11f-e233-499d-9b0d-fd3045ce4f26"}}}'
         headers:
             Content-Length:
-                - "794"
+                - "806"
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Thu, 24 Oct 2024 06:02:47 GMT
+                - Fri, 10 Jan 2025 11:59:27 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 76ff6c79a4ce4a7c
+                - 67aa165107be1e3b
             X-B3-Traceid:
-                - 3ef771c62891415076ff6c79a4ce4a7c
+                - 9dccc0d226b9403f67aa165107be1e3b
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -125,16 +125,16 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1729749788"
+                - "1736512024"
             X-Runtime:
-                - "0.011759"
+                - "0.009774"
             X-Vcap-Request-Id:
-                - 3ef771c6-2891-4150-76ff-6c79a4ce4a7c::6de92265-7e3b-4492-99df-8c82ea274b1f
+                - 9dccc0d2-26b9-403f-67aa-165107be1e3b::b82c18ff-0daa-41b2-898a-18c1cbbca468
             X-Xss-Protection:
                 - 1; mode=block
         status: 200 OK
         code: 200
-        duration: 177.357792ms
+        duration: 148.983041ms
     - id: 2
       request:
         proto: HTTP/1.1
@@ -152,8 +152,8 @@ interactions:
             Authorization:
                 - Bearer redacted
             User-Agent:
-                - Terraform/1.5.7 terraform-provider-cloudfoundry/dev
-        url: https://api.x.x.x.x.com/v3/space_quotas?names=hi&organization_guids=784b4cd0-4771-4e4d-9052-a07e178bae56
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/space_quotas?names=hi&organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5&page=1&per_page=50
         method: GET
       response:
         proto: HTTP/2.0
@@ -161,24 +161,24 @@ interactions:
         proto_minor: 0
         transfer_encoding: []
         trailer: {}
-        content_length: 434
+        content_length: 436
         uncompressed: false
-        body: '{"pagination":{"total_results":0,"total_pages":1,"first":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=784b4cd0-4771-4e4d-9052-a07e178bae56\u0026page=1\u0026per_page=50"},"last":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=784b4cd0-4771-4e4d-9052-a07e178bae56\u0026page=1\u0026per_page=50"},"next":null,"previous":null},"resources":[]}'
+        body: '{"pagination":{"total_results":0,"total_pages":1,"first":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"last":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"next":null,"previous":null},"resources":[]}'
         headers:
             Content-Length:
-                - "434"
+                - "436"
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Thu, 24 Oct 2024 06:02:47 GMT
+                - Fri, 10 Jan 2025 11:59:27 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 4e6e73f99dc19351
+                - 43dd6b64030872ae
             X-B3-Traceid:
-                - 4e7e214b99b049de4e6e73f99dc19351
+                - c115cecce18d489743dd6b64030872ae
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -192,13 +192,281 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1729749788"
+                - "1736512024"
             X-Runtime:
-                - "0.111406"
+                - "0.034769"
             X-Vcap-Request-Id:
-                - 4e7e214b-99b0-49de-4e6e-73f99dc19351::64f2cf3a-40d0-4cb5-87b6-cabf89a68129
+                - c115cecc-e18d-4897-43dd-6b64030872ae::c1d1b08f-f9ab-4a5a-b7c5-09c3e7449e86
             X-Xss-Protection:
                 - 1; mode=block
         status: 200 OK
         code: 200
-        duration: 272.594583ms
+        duration: 149.187833ms
+    - id: 3
+      request:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: api.x.x.x.x.com
+        remote_addr: ""
+        request_uri: ""
+        body: ""
+        form: {}
+        headers:
+            Authorization:
+                - Bearer redacted
+            User-Agent:
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5
+        method: GET
+      response:
+        proto: HTTP/2.0
+        proto_major: 2
+        proto_minor: 0
+        transfer_encoding: []
+        trailer: {}
+        content_length: 806
+        uncompressed: false
+        body: '{"guid":"3d3fcf37-a526-45f6-be96-4d7c4cee92a5","created_at":"2025-01-07T08:30:32Z","updated_at":"2025-01-07T08:31:35Z","name":"terraform-integration-prod_test-utu6l6uy","suspended":false,"relationships":{"quota":{"data":{"guid":"1840c11f-e233-499d-9b0d-fd3045ce4f26"}}},"metadata":{"labels":{},"annotations":{}},"links":{"self":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5"},"domains":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains"},"default_domain":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains/default"},"quota":{"href":"https://api.x.x.x.x.com/v3/organization_quotas/1840c11f-e233-499d-9b0d-fd3045ce4f26"}}}'
+        headers:
+            Content-Length:
+                - "806"
+            Content-Type:
+                - application/json; charset=utf-8
+            Date:
+                - Fri, 10 Jan 2025 11:59:28 GMT
+            Referrer-Policy:
+                - strict-origin-when-cross-origin
+            Strict-Transport-Security:
+                - max-age=31536000; includeSubDomains; preload;
+            X-B3-Spanid:
+                - 497c66f1bb33b2b4
+            X-B3-Traceid:
+                - 30723b09b04d4abb497c66f1bb33b2b4
+            X-Content-Type-Options:
+                - nosniff
+            X-Download-Options:
+                - noopen
+            X-Frame-Options:
+                - SAMEORIGIN
+            X-Permitted-Cross-Domain-Policies:
+                - none
+            X-Ratelimit-Limit:
+                - "20000"
+            X-Ratelimit-Remaining:
+                - "18000"
+            X-Ratelimit-Reset:
+                - "1736512023"
+            X-Runtime:
+                - "0.009166"
+            X-Vcap-Request-Id:
+                - 30723b09-b04d-4abb-497c-66f1bb33b2b4::1dbdb042-fe84-4fbf-a186-778b0039b3ce
+            X-Xss-Protection:
+                - 1; mode=block
+        status: 200 OK
+        code: 200
+        duration: 191.878917ms
+    - id: 4
+      request:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: api.x.x.x.x.com
+        remote_addr: ""
+        request_uri: ""
+        body: ""
+        form: {}
+        headers:
+            Authorization:
+                - Bearer redacted
+            User-Agent:
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/space_quotas?names=hi&organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5&page=1&per_page=50
+        method: GET
+      response:
+        proto: HTTP/2.0
+        proto_major: 2
+        proto_minor: 0
+        transfer_encoding: []
+        trailer: {}
+        content_length: 436
+        uncompressed: false
+        body: '{"pagination":{"total_results":0,"total_pages":1,"first":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"last":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"next":null,"previous":null},"resources":[]}'
+        headers:
+            Content-Length:
+                - "436"
+            Content-Type:
+                - application/json; charset=utf-8
+            Date:
+                - Fri, 10 Jan 2025 11:59:28 GMT
+            Referrer-Policy:
+                - strict-origin-when-cross-origin
+            Strict-Transport-Security:
+                - max-age=31536000; includeSubDomains; preload;
+            X-B3-Spanid:
+                - 49f57fe83a264f80
+            X-B3-Traceid:
+                - cda793503446484149f57fe83a264f80
+            X-Content-Type-Options:
+                - nosniff
+            X-Download-Options:
+                - noopen
+            X-Frame-Options:
+                - SAMEORIGIN
+            X-Permitted-Cross-Domain-Policies:
+                - none
+            X-Ratelimit-Limit:
+                - "20000"
+            X-Ratelimit-Remaining:
+                - "18000"
+            X-Ratelimit-Reset:
+                - "1736512023"
+            X-Runtime:
+                - "0.036355"
+            X-Vcap-Request-Id:
+                - cda79350-3446-4841-49f5-7fe83a264f80::32823193-0177-4c09-8a13-03d3a41273a1
+            X-Xss-Protection:
+                - 1; mode=block
+        status: 200 OK
+        code: 200
+        duration: 149.036625ms
+    - id: 5
+      request:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: api.x.x.x.x.com
+        remote_addr: ""
+        request_uri: ""
+        body: ""
+        form: {}
+        headers:
+            Authorization:
+                - Bearer redacted
+            User-Agent:
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5
+        method: GET
+      response:
+        proto: HTTP/2.0
+        proto_major: 2
+        proto_minor: 0
+        transfer_encoding: []
+        trailer: {}
+        content_length: 806
+        uncompressed: false
+        body: '{"guid":"3d3fcf37-a526-45f6-be96-4d7c4cee92a5","created_at":"2025-01-07T08:30:32Z","updated_at":"2025-01-07T08:31:35Z","name":"terraform-integration-prod_test-utu6l6uy","suspended":false,"relationships":{"quota":{"data":{"guid":"1840c11f-e233-499d-9b0d-fd3045ce4f26"}}},"metadata":{"labels":{},"annotations":{}},"links":{"self":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5"},"domains":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains"},"default_domain":{"href":"https://api.x.x.x.x.com/v3/organizations/3d3fcf37-a526-45f6-be96-4d7c4cee92a5/domains/default"},"quota":{"href":"https://api.x.x.x.x.com/v3/organization_quotas/1840c11f-e233-499d-9b0d-fd3045ce4f26"}}}'
+        headers:
+            Content-Length:
+                - "806"
+            Content-Type:
+                - application/json; charset=utf-8
+            Date:
+                - Fri, 10 Jan 2025 11:59:28 GMT
+            Referrer-Policy:
+                - strict-origin-when-cross-origin
+            Strict-Transport-Security:
+                - max-age=31536000; includeSubDomains; preload;
+            X-B3-Spanid:
+                - 68954cf47b2aec08
+            X-B3-Traceid:
+                - b5b740428b6948d168954cf47b2aec08
+            X-Content-Type-Options:
+                - nosniff
+            X-Download-Options:
+                - noopen
+            X-Frame-Options:
+                - SAMEORIGIN
+            X-Permitted-Cross-Domain-Policies:
+                - none
+            X-Ratelimit-Limit:
+                - "20000"
+            X-Ratelimit-Remaining:
+                - "18000"
+            X-Ratelimit-Reset:
+                - "1736512023"
+            X-Runtime:
+                - "0.010126"
+            X-Vcap-Request-Id:
+                - b5b74042-8b69-48d1-6895-4cf47b2aec08::fdbeeb9f-8fbf-4e4d-a3d2-ef1a1c321c52
+            X-Xss-Protection:
+                - 1; mode=block
+        status: 200 OK
+        code: 200
+        duration: 139.507833ms
+    - id: 6
+      request:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: api.x.x.x.x.com
+        remote_addr: ""
+        request_uri: ""
+        body: ""
+        form: {}
+        headers:
+            Authorization:
+                - Bearer redacted
+            User-Agent:
+                - Terraform/1.9.4 terraform-provider-cloudfoundry/dev
+        url: https://api.x.x.x.x.com/v3/space_quotas?names=hi&organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5&page=1&per_page=50
+        method: GET
+      response:
+        proto: HTTP/2.0
+        proto_major: 2
+        proto_minor: 0
+        transfer_encoding: []
+        trailer: {}
+        content_length: 436
+        uncompressed: false
+        body: '{"pagination":{"total_results":0,"total_pages":1,"first":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"last":{"href":"https://api.x.x.x.x.com/v3/space_quotas?names=hi\u0026organization_guids=3d3fcf37-a526-45f6-be96-4d7c4cee92a5\u0026page=1\u0026per_page=50"},"next":null,"previous":null},"resources":[]}'
+        headers:
+            Content-Length:
+                - "436"
+            Content-Type:
+                - application/json; charset=utf-8
+            Date:
+                - Fri, 10 Jan 2025 11:59:28 GMT
+            Referrer-Policy:
+                - strict-origin-when-cross-origin
+            Strict-Transport-Security:
+                - max-age=31536000; includeSubDomains; preload;
+            X-B3-Spanid:
+                - 60c9830b7e1cc0b6
+            X-B3-Traceid:
+                - e9de0952b99b418f60c9830b7e1cc0b6
+            X-Content-Type-Options:
+                - nosniff
+            X-Download-Options:
+                - noopen
+            X-Frame-Options:
+                - SAMEORIGIN
+            X-Permitted-Cross-Domain-Policies:
+                - none
+            X-Ratelimit-Limit:
+                - "20000"
+            X-Ratelimit-Remaining:
+                - "18000"
+            X-Ratelimit-Reset:
+                - "1736512023"
+            X-Runtime:
+                - "0.036401"
+            X-Vcap-Request-Id:
+                - e9de0952-b99b-418f-60c9-830b7e1cc0b6::bd8a3e65-54e7-45fb-b6b4-0443fbbe032b
+            X-Xss-Protection:
+                - 1; mode=block
+        status: 200 OK
+        code: 200
+        duration: 145.304833ms
